<resources>
    <string name="app_name">Dragon Tribe OC Maker</string>
    <string name="go_to_setting_title">Permission settings</string>
    <string name="go_to_setting_message">The app needs this permission</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="this_action_can_contain_ads">This action can contain ads</string>
    <string name="english">English</string>
    <string name="not_select_lang">Please select a language</string>
    <string name="next">Next</string>
    <string name="language">Language</string>
    <string name="title_1">Create your own avatar however you like</string>
    <string name="title_2">Diverse Unique Categories</string>
    <string name="title_3">Great Variety Of Items</string>

    <string name="permission">Permission</string>
    <string name="storage">Storage</string>
    <string name="continue_per">Continue</string>
    <string name="notification">Notification</string>
    <string name="granted_notification">Notification permission granted</string>
    <string name="denied_notification">Notification permission denied</string>
    <string name="granted_storage">Storage permission granted</string>
    <string name="denied_storage">Storage permission denied</string>
    <string name="reject_access">Please grant storage permission to use the application</string>
    <string name="allow">Allow</string>
    <string name="to_access">to access\nphotos, media and files on your device</string>

    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <string name="privacy_policy"><![CDATA[Privacy & Policy]]></string>
    <string name="rate_us_ed">You\'ve already voted!</string>
    <string name="one_start_title">Little buddy made me cry</string>
    <string name="two_start_title">I’m a little sad</string>
    <string name="three_start_title">Great job little buddy</string>
    <string name="four_start_title">You are so handsome</string>
    <string name="five_start_title">I love you so much</string>
    <string name="zero_star_title">Do you like the app?</string>
    <string name="one_start">I will cry all day</string>
    <string name="two_start">I will not eat rice today</string>
    <string name="three_start">I know you won\'t let me be sad</string>
    <string name="four_start">The prince is so handsome</string>
    <string name="five_start">let\'s get married</string>
    <string name="zero_star">I need your love</string>
    <string name="rate_us_0">You have not rated it yet!</string>
    <string name="rate">Rate</string>
    <string name="exit">Exit your customize</string>
    <string name="exit_rate">Exit</string>
    <string name="not_yet_rate">Please select number of stars</string>
    <string name="have_rated">Thank you for rate our app</string>

    <string name="category">Category</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="no_item_here">No item is here</string>
    <string name="save">Save</string>
    <string name="successfully">Successfully</string>
    <string name="image_has_been_saved_successfully">Image has been saved successfully!</string>
    <string name="delete">Delete your customize</string>
    <string name="character">Character</string>
    <string name="do_you_want_to_delete">Are you sure you want to \ndelete the image?</string>
    <string name="do_you_want_to_delete_1">Do you want to \ndelete the image?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="wait_a_few_second">Wait a minute</string>
    <string name="download_success">Download Success To Girl Maker Album</string>
    <string name="do_you_want_to_reset">Change your whole design, \nare you sure?</string>
    <string name="my_album">My Album</string>
    <string name="do_you_want_to_exit">Haven’t saved it yet, do you \nwant to exit?</string>
    <string name="reset">Reset your customize</string>

    <string name="please_select_an_image">Please_ select an image</string>
    <string name="please_check_your_internet_connection">Please check your internet connection</string>
    <string name="error">Error</string>
    <string name="an_error_occurred">An error occurred, would you like to try again?</string>
    <string name="my_ncreation">My \nCreation</string>
    <string name="girl_nmaker">Girl \nMaker</string>
    <string name="suggestions">Suggestions</string>
    <string name="you_have_successfully_created_a_character">You have successfully created a character</string>
    <string name="my_creation">My Creation</string>
    <string name="you_don_t_have_any_character">You don\'t have any character</string>
    <string name="network_connection_error">Network connection error</string>
    <string name="check_your_network_connection">Check your network connection</string>
    <string name="loading">Loading</string>
    <string name="it_only_takes_a_few_seconds">It only takes a few seconds.</string>
    <string name="sticker">MY\nCREATION</string>
    <string name="create_maker">DRAGON TRIBE\nOC MAKER</string>
    <string name="hikari_category">TACHIBANA\nHIKARI</string>
    <string name="yume_category">KANZAKI\nYUME</string>
    <string name="aoi_category">SHIROSAWA\nAOI</string>
    <string name="creation">Creation</string>
    <string name="add_to_telegram">Add to TeleGram</string>
    <string name="add_to_whatsapp">Add to Whatsapp</string>
    <string name="downloading">Downloading...</string>
    <string name="please_check_your_internet">Please check your internet!</string>
    <string name="internet">Internet!</string>
    <string name="exit_your_customize">Exit your customize</string>
    <string name="haven_t_saved_it_yet_do_you_want_to_exit">Haven’t saved it yet, do you want to exit?</string>
    <string name="save_failed_please_try_again">Save failed! Please try again.</string>
    <string name="reset_your_customize">Reset your customize</string>
    <string name="change_your_whole_design_are_you_sure">Change your whole design, are you sure?</string>
    <string name="you_dont_character">You don\'t have any character</string>
    <string name="delete_success">Delete Success</string>
    <string name="delete_failed">Delete Fail</string>
    <string name="select_imgae">You haven’t selected any photos</string>
</resources>