<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_language"
    tools:context=".ui.permission.PermissionActivity">

    <RelativeLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/tranf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/back_language"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/txtTitle1"
                style="@style/custom_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/btnSettings"
                android:layout_toEndOf="@+id/btnBack"
                android:fontFamily="@font/londrina_solid_regular"
                android:gravity="center"
                android:paddingVertical="2dp"
                android:text="@string/permission"
                android:textColor="@color/white"
                android:textSize="24sp" />


            <ImageView
                android:id="@+id/btnSettings"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:visibility="invisible" />
        </RelativeLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/imgPer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/img_permission"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_marginTop="106dp"
        android:layout_marginBottom="50dp"
        android:layout_marginHorizontal="80dp"
        app:layout_constraintBottom_toTopOf="@+id/fragEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutPermission" />


    <ImageView
        android:id="@+id/imgTxtper"
        android:layout_width="match_parent"
        android:layout_height="97dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="-42dp"
        android:scaleType="fitXY"
        android:src="@drawable/think_permission"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgPer" />

    <LinearLayout
        android:id="@+id/txtPermission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/imgTxtper"
        app:layout_constraintStart_toStartOf="@+id/imgTxtper"
        app:layout_constraintTop_toTopOf="@+id/imgTxtper">

        <TextView
            android:id="@+id/txtPer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutPermission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actionBar">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/layoutStorage"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:cardCornerRadius="16dp"
            app:strokeColor="#6B1B10"
            app:strokeWidth="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="56dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/londrina_solid_regular"
                    android:gravity="start"
                    android:text="@string/storage"
                    android:textColor="@color/orange"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/switchPermission"
                    android:layout_width="56dp"
                    android:layout_height="32dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/switch_off_permission" />
            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/layoutNotifi"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="16dp"
            app:strokeColor="#6B1B10"
            app:strokeWidth="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="56dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="14dp"
                    android:fontFamily="@font/londrina_solid_regular"
                    android:gravity="start"
                    android:text="@string/notification"
                    android:textColor="@color/orange"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/switchNotification"
                    android:layout_width="56dp"
                    android:layout_height="32dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/switch_off_permission" />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/txtContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:fontFamily="@font/londrina_solid_regular"
            android:padding="10dp"
            android:text="@string/continue_per"
            android:textColor="#6B1B10"
            android:textSize="20sp" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>