<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home"
    tools:context=".ui.home.HomeActivity">

    <ImageView
        android:id="@+id/btnSetting"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/icon_setting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/txtTitleHome"
        android:layout_width="360dp"
        android:layout_height="140dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/img_title_splash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSetting" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitleHome">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btnWing"
                android:layout_width="match_parent"
                android:layout_height="150dp"

                app:layout_constraintTop_toBottomOf="@+id/title_home">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/frame_wing" />

                <ImageView
                    android:id="@+id/image1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|start"
                    android:adjustViewBounds="true"
                    android:src="@drawable/img_wing" />


                <com.dragon.tribe.fire.oc.maker.core.custom.StrokeTextView
                    android:id="@+id/txtCreate1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/londrina_solid_regular"
                    android:gravity="center"
                    android:text="@string/create_maker"
                    android:textColor="#FC2BA3"
                    android:textSize="32sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/image1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:strokeColor="#FFFFFF"
                    app:strokeWidth="1dp"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:freezesText="true"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btnMyCreation"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/title_home">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:scaleType="fitXY"
                    android:src="@drawable/frame_creation" />

                <ImageView
                    android:id="@+id/image2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:src="@drawable/img_creation" />

                <com.dragon.tribe.fire.oc.maker.core.custom.StrokeTextView
                    android:id="@+id/txtSticker1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/image2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_marginHorizontal="16dp"
                    android:fontFamily="@font/londrina_solid_regular"
                    android:gravity="center"
                    android:text="@string/sticker"
                    android:textColor="#824BE5"
                    android:textSize="32sp"
                    app:strokeColor="#FFFFFF"
                    app:strokeWidth="2dp"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:freezesText="true"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/londrina_solid_regular"
                android:text="@string/suggestions"
                android:textColor="@color/white"
                android:textSize="20sp" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerSticker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:overScrollMode="never"
                android:clipToPadding="false"
                android:paddingTop="8dp"
                tools:listitem="@layout/item_list_sticker"
                 />


        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>